--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,6 +10,21 @@
       "request": "launch",
       "mode": "auto",
       "program": "${fileDirname}"
-    }
+    },
+{
+  "name": "Debug Go Benchmark",
+  "type": "go",
+  "request": "launch",
+  "mode": "test",
+  "program": "${fileDirname}",
+  /*
+  -test.run=^$ → run no tests
+
+-test.bench=. → run all benchmarks
+  */
+  "args": ["-test.run=^$", "-test.bench=."]
+}
+
+
   ]
 }
