--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,20 +11,35 @@
       "mode": "auto",
       "program": "${fileDirname}"
     },
-{
-  "name": "Debug Go Benchmark",
-  "type": "go",
-  "request": "launch",
-  "mode": "test",
-  "program": "${fileDirname}",
-  /*
+    {
+      "name": "Launch Package (No Opt)",
+      "type": "go",
+      "request": "launch",
+      "mode": "auto",
+      "program": "${fileDirname}",
+      "buildFlags": "-gcflags=\"all=-N -l\""
+      /*
+      -N → no optimizations
+
+-l → no inlining
+
+variables stay visible
+
+stepping behaves sanely
+      */
+    },
+    {
+      "name": "Debug Go Benchmark",
+      "type": "go",
+      "request": "launch",
+      "mode": "test",
+      "program": "${fileDirname}",
+      /*
   -test.run=^$ → run no tests
 
 -test.bench=. → run all benchmarks
   */
-  "args": ["-test.run=^$", "-test.bench=."]
-}
-
-
+      "args": ["-test.run=^$", "-test.bench=."]
+    }
   ]
 }
